--- a/index.html
+++ b/index.html
@@ -28,10 +28,38 @@
     <div class="content">
       <h1>The Sky Is The Limit</h1>
       <p>World Class Business Consulting</p>
-      <a href="#about" class="btn"><i class="fas fa-chevron-right"></i> Read More</a>
+      <a href="#about" class="btn btn-primary"><i class="fas fa-chevron-right"></i> Read More</a>
     </div>
 
 
   </header>
+  
+  <main>
+    <section id="about" class="icons bg-light">
+      <div class="flex-items">
+        <div>
+          <i class="fas fa-university fa-2x"></i>
+          <div>
+            <h3>Business Consulting</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, ipsum?</p>
+          </div>
+        </div>
+        <div>
+          <i class="fas fa-book-reader fa-2x"></i>
+          <div>
+            <h3>Portfolio Management</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, ipsum?</p>
+          </div>
+        </div>
+        <div>
+          <i class="fas fa-pencil-alt fa-2x"></i>
+          <div>
+            <h3>Financial Assistance</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, ipsum?</p>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
