--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   </header>
   
   <main>
+    <!-- About Icons -->
     <section id="about" class="icons bg-light">
       <div class="flex-items">
         <div>
@@ -56,6 +57,29 @@
           <div>
             <h3>Financial Assistance</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, ipsum?</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- About: Solutions -->
+    <section class="solutions flex-columns">
+      <div class="row">
+        <div class="column">
+          <div class="column-1">
+            <img src="images/home/people.jpg" alt="">
+
+          </div>
+        </div>
+        <div class="column">
+          <div class="column-2 bg-primary">
+            <h4>What You Are Looking For</h4>
+            <h2>We Provide the Best Solutions</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem, voluptas consectetur enim voluptate officia explicabo at expedita aperiam. Quaerat deserunt consequatur quis, ut perspiciatis molestiae praesentium aperiam! Aliquam, consequatur ullam.</p>
+            <a href="#" class="btn btn-outline">
+              <i class="fas fa-chrevron"></i>
+              Read More
+            </a>
+
           </div>
         </div>
       </div>
