Created Blog Post Page
Linked Blog Post One and created the page for a single blog post

--- a/blog.html
+++ b/blog.html
@@ -50,7 +50,7 @@
               <i class="fas fa-user"></i> Posted by <strong>John Doe</strong> | August 7 2023
             </p>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem, voluptas consectetur enim voluptate officia explicabo at expedita aperiam. Quaerat deserunt consequatur quis, ut perspiciatis molestiae praesentium aperiam! Aliquam, consequatur ullam.</p>
-            <a href="#" class="btn btn-dark">
+            <a href="post.html" class="btn btn-dark">
               <i class="fas fa-chrevron"></i>
               Read More
             </a>
@@ -76,7 +76,7 @@
               <i class="fas fa-user"></i> Posted by <strong>Jane Doe</strong> | August 5 2023
             </p>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem, voluptas consectetur enim voluptate officia explicabo at expedita aperiam. Quaerat deserunt consequatur quis, ut perspiciatis molestiae praesentium aperiam! Aliquam, consequatur ullam.</p>
-            <a href="#" class="btn btn-light">
+            <a href="post.html" class="btn btn-light">
               <i class="fas fa-chrevron"></i>
               Read More
             </a>
@@ -102,7 +102,7 @@
               <i class="fas fa-user"></i> Posted by <strong>Joe Smith</strong> | August 6 2023
             </p>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem, voluptas consectetur enim voluptate officia explicabo at expedita aperiam. Quaerat deserunt consequatur quis, ut perspiciatis molestiae praesentium aperiam! Aliquam, consequatur ullam.</p>
-            <a href="#" class="btn btn-dark">
+            <a href="post.html" class="btn btn-dark">
               <i class="fas fa-chrevron"></i>
               Read More
             </a>
